templates/redis-proxy.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-redis-proxy
#  namespace: istio-system
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      listener:
        name: 127.0.0.1_6380
        filterChain:
          filter:
            name: "envoy.filters.network.tcp_proxy"
    patch:
      operation: REPLACE
      value:
        name: envoy.redis_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.redis_proxy.v3.RedisProxy
          latencyInMicros: true
          stat_prefix: redis_stats
          prefix_routes:
            catch_all_route:
              cluster: test-redis-cluster-with-istio
          settings:
            op_timeout: 5s
            enable_redirection: true # Redirect MOVED/ASK responses to given node
            enable_command_stats: true
            read_policy: ANY
            dns_cache_config:
              name: dns_cache_for_redis
              dns_lookup_family: V4_ONLY
              max_hosts: 100
