templates/serviceentry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: redis-cluster
spec:
  resolution: DNS
  hosts:
  - redis-cluster
  addresses:
  - 127.0.0.1
  exportTo: [.]
  location: MESH_INTERNAL
  ports:
  - number: 6380
    name: redis
    protocol: TCP
